added Card, Purchases, fixed scraper